# AssetMind

./: .gitignore  README.md  build.gradle  package-lock.json  settings.gradle
apps/data-pipeline/: .gitignore  Dockerfile  docker-compose.yml  dockerfile  pyproject.toml
apps/data-pipeline/configs/: adapter_demo.yml  decorator_demo.yml  extractor.yml  extractor_demo.yml  loader.yml  logging.yml  logging_demo.yml  pipeline.yml
apps/data-pipeline/dags/: bronze_pipeline_dag.py  system_health_check_dag.py
apps/data-pipeline/examples/: adapter_demo.py  decorator_demo.py  extractor_demo.py  extractor_factory_demo.py  extractor_service_demo.py  local_s3_loader.py  logging_demo.py  pipeline_service_demo.py
apps/data-pipeline/scripts/: init_airflow.sh  init_aws.sh  init_minio.sh  init_poetry.sh  setup.sh
apps/data-pipeline/src/: main.py  pipeline_service.py  s3_client.py  verification.py
apps/data-pipeline/src/common/: __init__.py  config.py  dtos.py  exceptions.py  interfaces.py  log.py  utils.py
apps/data-pipeline/src/common/decorators/: __init__.py  log_decorator.py  rate_limit_decorator.py  retry_decorator.py
apps/data-pipeline/src/configs/: init_postgres.py
apps/data-pipeline/src/extractor/: decorators.py  extractor_factory.py  extractor_service.py  factory.py  service.py
apps/data-pipeline/src/extractor/adapters/: auth.py  http_client.py
apps/data-pipeline/src/extractor/domain/: dtos.py  exceptions.py  interfaces.py
apps/data-pipeline/src/extractor/providers/: abstract.py  abstract_extractor.py  ecos_extractor.py  fred_extractor.py  kis.py  kis_extractor.py  upbit_extractor.py
apps/data-pipeline/src/loader/: loader_service.py
apps/data-pipeline/src/loader/providers/: abstract_loader.py  s3_loader.py
apps/data-pipeline/src/reader/providers/: abstract_reader.py  s3_zstd_reader.py
apps/data-pipeline/src/transformer/processors/: abstract_transformer.py  data_merger.py
apps/data-pipeline/tests/: s3_test.py
apps/data-pipeline/tests/integration/: test_pipeline_flow.py
apps/data-pipeline/tests/unit/: pipeline_service_test.py  test_main.py  test_pipeline_service.py
apps/data-pipeline/tests/unit/common/: config_test.py  interfaces_test.py  log_test.py  test_config.py  test_dtos.py  test_exceptions.py  test_interfaces.py  (+1 more)
(+714 files in other folders)
