[project]
name = "data-pipeline"
version = "0.1.0"
description = "S3/MinIO Data Pipeline"
authors = [
    {name = "Kim Jun-su"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "boto3 (>=1.42.22,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

