[project]
name = "data-pipeline"
version = "0.1.0"
description = "S3/MinIO Data Pipeline"
authors = [
    {name = "Kim Jun-su"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "boto3 (>=1.42.22,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

