[project]
name = "data-pipeline"
version = "0.1.0"
description = "S3/MinIO Data Pipeline"
authors = [
    {name = "Kim Jun-su"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "boto3 (>=1.42.22,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pyjwt (>=2.11.0,<3.0.0)",
    "pytest-html (>=4.2.0,<5.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "zstandard (>=0.25.0,<0.26.0)",
    "pendulum (>=3.2.0,<4.0.0)",
    "apache-airflow-providers-postgres (>=6.6.3,<7.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
apache-airflow = "^3.2.0"

[tool.pytest.ini_options]
pythonpath = [
  "."
]